<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GOT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bubble_sort">冒泡排序</string>
    <string name="quick_sort">快速排序</string>
    <string name="merge_sort">归并排序</string>
    <string name="select_sort">选择排序</string>
    <string name="inertion_sort">插入排序</string>
    <string name="shell_sort">希尔排序</string>
    <string name="display">显示</string>
    <string name="chart">图示</string>
    <string name="code">源码</string>
    <string name="principle">原理</string>

</resources>
